# Coursework_19.2

./: pyproject.toml
catalog/: urls.py
config/: settings.py
